added surfing website

--- a/index.html
+++ b/index.html
@@ -8,6 +8,95 @@
     <title>A Modern Escape</title>
 </head>
 <body>
-    <h1>A modern Escape</h1>
+    <div class="container">
+        <header class="site-header">
+            <div class="row row--centered">
+                <div class="col-2">
+                    <div class="site-logo">
+                        <img height="40" width="40" src="assets/images/logo2.png" alt="">
+                    </div>
+                    <!-- /.site-logo -->
+                </div>
+                <!-- /.col-2 -->
+                <div class="col-10">
+                    <nav class="site-nav">
+                        <ul>
+                            <li><a href="#">Stories</a></li>
+                            <li><a href="#">Events</a></li>
+                            <li><a href="#">Places</a></li>
+                            <li><a href="#">Boards</a></li>
+                        </ul>
+                    </nav>
+                    <!-- /.site-nav -->
+                </div>
+                <!-- /.col-10 -->
+            </div>
+            <!-- /.row -->   
+        </header>
+        <!-- /.site-header -->
+        <div class="hero">
+            <div class="hero__slide">
+                <div class="hero__text">
+                    <div class="info-block">
+                        <!-- /.info-block__subtitle -->
+                        <div class="info-block__title info-block__title--fancy info-block__title--bigger">
+                            <h1><span class="info-block__subtitle">Your</span> Beautiful Escape</h1>
+                        </div>
+                        <!-- /.info-block__title -->
+                        <div class="info-block__body">
+                            <p>One of the greatest things about the sport of surfing is that you need only three things: your body, a surfboard, and a wave.</p>
+                        </div>
+                        <!-- /.info-block__body --> 
+                    </div>
+                    <!-- /.info__block -->
+                </div>
+                <!-- /.hero__text -->
+                <div class="hero__img">
+                    <img width="1016" height="572" src="assets/images/hero-image.jpg" srcset="assets/images/hero-image@2x.jpg 2x" alt="Your Beautiful Escape">
+                </div>
+                <!-- /.hero__img -->
+            </div>
+            <!-- h/.hero__slide -->
+        </div>
+        <!-- /.hero -->
+        <div class="quote">
+            <blockquote>
+                <p class="quote__body">Surfing is the most blissfull experience you can have on this planet, a taste of heaven.</p>
+                <cite class="quote__name">John McCarthy</cite>
+            </blockquote>
+        </div>
+        <!-- /.quote -->
+
+        <div class="d-flex">
+            <div class="showcase">
+                <div class="showcase__img">
+                    <img width="706" height="549" src="assets/images/surfboard.jpg" srcset="assets/images/surfboard@2x.jpg 2x" alt="">
+                </div>
+                <!-- /.showcase__img -->
+                <div class="showcase__body">
+                    <div class="info-block__body">
+                        <p>One of the greatest things about the sport of surfing is that you need only three things: your body, a surfboard, and a wave.</p>
+                    </div>
+                    <!-- /.info-block__body --> 
+                    <div class="info-block__cta">
+                        <p><a href="#">Read more</a></p>
+                    </div>
+                    <!-- /.info-block__cta -->
+                </div>
+                <!-- /.showcase__body -->
+            </div>
+            <!-- /.showcase -->
+            <div class="showcase showcase--bigger">
+                <div class="showcase__img">
+                    
+                    <img width="706" height="549" src="assets/images/surfing@2x.jpg" srcset="assets/images/surfingog.jpg 2x" alt="">
+                </div>
+                <!-- /.showcase__img -->
+            </div>
+            <!-- /.showcase -->
+        </div>
+        <!-- /.d-flex -->
+    </div>
+<!-- /.container -->
 </body>
 </html>
